# brassfibre

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: block.rs  formatting.rs  frame.rs  indexer.rs  series.rs
src/: block.rs  blockgroupby.rs  computations.rs  eval.rs  formatting.rs  groupby.rs  index.rs  lib.rs  macros.rs  prelude.rs  series.rs  seriesgroupby.rs  traits.rs
src/algos/: computation.rs  counter.rs  duplicates.rs  elemwise.rs  factorize.rs  groupby.rs  grouper.rs  indexing.rs  join.rs  mod.rs  set.rs  sort.rs
src/block/: aggregation.rs  formatting.rs  groupby.rs  mod.rs  ops.rs  reshape.rs
src/frame/: aggregation.rs  formatting.rs  groupby.rs  mod.rs  reshape.rs
src/indexer/: convert.rs  formatting.rs  indexing.rs  mod.rs  ops.rs  sort.rs
src/internals/: aggregation.rs  convert.rs  mod.rs  ops.rs  scalar.rs
src/io/: mod.rs
src/series/: aggregation.rs  convert.rs  formatting.rs  groupby.rs  mod.rs  ops.rs  sort.rs
tests/: array.rs  array_aggregation.rs  block.rs  block_aggregation.rs  block_groupby.rs  block_reshape.rs  format.rs  frame.rs  frame_aggregation.rs  frame_groupby.rs  frame_reshape.rs  indexer.rs  io_csv.rs  scalar.rs  series.rs  series_aggregation.rs  series_groupby.rs
