[package]
name = "brassfibre"
version = "0.2.0"
authors = ["sinhrks <sinhrks@gmail.com>"]
repository = "https://github.com/sinhrks/brassfibre"
license = "BSD-3-Clause"
readme = "README.md"
description = "Provides multiple-dtype columner storage, known as DataFrame in pandas/R "
keywords = [ "DataFrame", "Preprocessing", "Columner", "DataStore"]

[dependencies]
csv = "0.14.7"
num = "0.1.36"
# rayon = "0.4.2"
rustc-serialize = "0.3.21"
